# sota-bluetooth

./: .gitignore  Cargo.toml  Dockerfile  Makefile
bluetooth-pkg/: Cargo.toml
builder/: Dockerfile  repositories  setup.sh
sota.evol/: -63ecac6a.rsa.pub  -640efcf3.rsa.pub  bluetooth.conf  entrypoint.sh  sota-bluetooth-0.0.5-r0.apk  sota-bluetooth.start
src/: discover_devices.rs  gatt.inc  main.rs
user.abuild/: -63e49077.rsa  -63e49077.rsa.pub  -63ecac6a.rsa  -640efcf3.rsa  APKBUILD  abuild.conf  entrypoint.sh
