[package]
name = "sota-bluetooth"
version = "0.0.2"
edition = "2021"

[features]
default = []
full = [
  "dbus",
  "dbus-tokio",
  "dbus-crossroads",
  "pin-project",
  "tokio/rt",
  "tokio/sync",
  "tokio/macros",
  "tokio-stream",
  "lazy_static",
  "custom_debug",
  "displaydoc",
  "id",
  "l2cap",
  "rfcomm",
  "serde"
]

id = []
l2cap = []
rfcomm = []
serde = ["uuid/serde", "dep:serde"]

[dependencies]
dbus = { version = "0.9", features = ["futures"], optional = true }
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["net", "io-util"] }
tokio-stream = { version = "0.1", optional = true }
hex = { version = "0.4" }
lazy_static = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"

[dev-dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread"] }
env_logger = "0.10"
rand = "0.8"
