[package]
name = "sota-bluetooth"
version = "0.0.5"
edition = "2021"

[dependencies]
dbus = { version = "0.9", optional = true }
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }
hex = { version = "0.4" }
lazy_static = { version = "1", optional = true }
uuid = { version = "1" }
log = "0.4"
env_logger = "0.10"
serde = { version = "1", optional = true }
bluer = { version = "0.15.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
rand = "0.8"
